Perform dedicated validation pass on TorrentMetadata and TorrentFile